# ndatafusion

./: .gitignore  .justfile  AGENTS.md  CATALOG.md  CHANGELOG.md  Cargo.toml  EXERCISES.md  README.md  RELEASE_NOTES.md  cliff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pr.yml  release.yml  security.yml
.zed/: settings.json
docs/: ARCHITECTURE.md  CAPABILITY_MATRIX.md  DECISIONS.md  EXECUTION_TRACKER.md  PUBLISH_CHECKLIST.md  README.md  STATUS.md
examples/: direct_arrow_vectors.rs  hello_sql.rs  pca_pipeline.rs
src/: error.rs  functions.rs  lib.rs  metadata.rs  register.rs  signatures.rs  udaf.rs  udafs.rs  udf.rs  udf_test_suite.rs  udf_tests.rs  udfs.rs  udtf.rs
src/udf/: common.rs  constructors.rs  decomposition.rs  differentiation.rs  docs.rs  iterative.rs  matrix.rs  matrix_equations.rs  matrix_functions.rs  ml.rs  optimization.rs  sparse.rs  sparse_factorization.rs  tensor.rs  tensor_decomposition.rs  triangular.rs  vector.rs
tests/: e2e.rs
