[package]
name = "ndatafusion"
version = "0.0.1"
edition = "2024"
authors = ["George Lee Patterson <patterson.george@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/georgeleepatterson/ndatafusion"
homepage = "https://github.com/georgeleepatterson/ndatafusion"
documentation = "https://docs.rs/ndatafusion"
description = "Extensions and support for linear algebra in DataFusion"
readme = "./README.md"
keywords = ["datafusion", "linear-algebra", "ndarray", "machine-learning"]
categories = ["mathematics", "science", "algorithms", "artificial-intelligence", "database"]

[dependencies]
datafusion = { git = "https://github.com/apache/datafusion.git", rev = "8d9b080882179b618a2057e042fc32865f6484b4", features = ["math_expressions"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
large_futures = "warn"
clone_on_ref_ptr = "warn"
must_use_candidate = "warn"

[lints.rust]
unused_imports = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "warn"
let_underscore_drop = "warn"
missing_copy_implementations = "warn"
redundant_lifetimes = "warn"
rust_2024_incompatible_pat = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_results = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[profile.release-with-debug]
inherits = "release"
debug = "full"

[profile.release-lto]
inherits = "release"
lto = true
opt-level = 3
codegen-units = 1

[profile.instruments]
inherits = "release"
debug = "full"
lto = "off"
codegen-units = 16
opt-level = 2
debug-assertions = false
incremental = false

[profile.release-with-debug.package."*"]
debug = "full"

[profile.instruments.package."*"]
debug = "full"

[profile.ci]
inherits = "dev"
incremental = false

[profile.ci.package."*"]
debug = false
debug-assertions = false
strip = "debuginfo"
incremental = false
