[package]
name = "ndatafusion"
version = "0.0.1"
edition = "2024"
rust-version = "1.92"
authors = ["George Lee Patterson <patterson.george@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/georgeleepatterson/ndatafusion"
homepage = "https://github.com/georgeleepatterson/ndatafusion"
documentation = "https://docs.rs/ndatafusion"
description = "Extensions and support for linear algebra in DataFusion"
readme = "./README.md"
keywords = ["datafusion", "linear-algebra", "ndarray", "machine-learning"]
categories = ["mathematics", "science", "algorithms", "artificial-intelligence", "database"]

[package.metadata.docs.rs]
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "hello_sql"
path = "examples/hello_sql.rs"

[[example]]
name = "direct_arrow_vectors"
path = "examples/direct_arrow_vectors.rs"

[[example]]
name = "pca_pipeline"
path = "examples/pca_pipeline.rs"

[features]
default = []
test-utils = ["nabled/test-utils"]
blas = ["nabled/blas"]
lapack-provider = ["nabled/lapack-provider"]
openblas-system = ["blas", "nabled/openblas-system"]
openblas-static = ["blas", "nabled/openblas-static"]
netlib-system = ["blas", "nabled/netlib-system"]
netlib-static = ["blas", "nabled/netlib-static"]
magma-system = ["lapack-provider", "nabled/magma-system"]
accelerator-rayon = ["nabled/accelerator-rayon"]
accelerator-wgpu = ["nabled/accelerator-wgpu"]

[dependencies]
datafusion = { git = "https://github.com/apache/datafusion.git", rev = "8d9b080882179b618a2057e042fc32865f6484b4", features = ["math_expressions"] }
nabled = { version = "0.0.7", default-features = false, features = ["arrow"] }
ndarrow = { version = "0.0.3" }
arrow-schema = "58.0.0"
ndarray = "0.17.2"
ndarray-linalg = { version = "0.18", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
num-complex = "0.4"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
large_futures = "warn"
clone_on_ref_ptr = "warn"
must_use_candidate = "warn"

[lints.rust]
unused_imports = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "warn"
let_underscore_drop = "warn"
missing_copy_implementations = "warn"
redundant_lifetimes = "warn"
rust_2024_incompatible_pat = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_results = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[profile.release-with-debug]
inherits = "release"
debug = "full"

[profile.release-lto]
inherits = "release"
lto = true
opt-level = 3
codegen-units = 1

[profile.instruments]
inherits = "release"
debug = "full"
lto = "off"
codegen-units = 16
opt-level = 2
debug-assertions = false
incremental = false

[profile.release-with-debug.package."*"]
debug = "full"

[profile.instruments.package."*"]
debug = "full"

[profile.ci]
inherits = "dev"
incremental = false

[profile.ci.package."*"]
debug = false
debug-assertions = false
strip = "debuginfo"
incremental = false
